# xchain-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  QUICKSTART.md  VERIFICATION.md
examples/: full_demo.py  sdk_usage.py
src/: xchain_sdk.py
src/xchain/: __init__.py  bridge_core.py  client.py  relayer.py
src/xchain/chain/: __init__.py  manager.py  nodes.py  start_chains.sh
src/xchain/cli/: __init__.py  main.py
src/xchain/contracts/: CrossChainBridge.sol  LiquorCertificate.sol  LiquorPledge.sol  __init__.py
tests/: conftest.py  test_bridge_core.py  test_contracts.py  test_import_shim.py  test_merkle.py
